Add some style to landing page

--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Laboratoria: Capítulo Developers</title>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1">
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <meta name="robots" content="noindex, nofollow">
+  <title>Developer center | Laboratoria </title>
   <script src="//use.typekit.net/owh6gyt.js"></script>
-  <script>try{Typekit.load();}catch(e){}</script>  
+  <script>try{Typekit.load();}catch(e){}</script>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
-  <h1>Capítulo de desarrolladores de laboratoria</h1>
-  <ul class="resources">
-    <li><a href="#">API docs</a></li>
-    <li><a href="#">Tutoriales</a></li>
-    <li><a href="#">Guía de estilos</a></li>
-    <li><a href="#">github</a></li>
-    <li><a href="#">Canal de Slack</a></li>
-    <li><a href="#">Curricula</a></li>
-  </ul>
+  <header>
+    <div class="container">
+      <img src="http://v.fastcdn.co/u/cf943cfe/13990388-0-logo-lab.PNG" alt="laboratoria">
+    </div>
+  </header>
+  <div class="block_header">
+    <div class="color-overlay"></div>
+    <div class="block-holder">
+      <h1>Laboratoria Developer center</h1>
+    </div>
+  </div>
+  <div class="container">
+    <section class="resources">
+      <a href="#">
+        <img src="img/api.png" alt="api">
+        <p>API docs</p>
+      </a>
+      <a href="#">
+        <img src="img/tutorials.png" alt="api">
+        <p>Tutoriales</p>
+      </a>
+      <a href="#">
+        <img src="img/style.png" alt="api">
+        <p>Guía de estilos</p>
+      </a>
+      <a href="#">
+        <img src="img/github.png" alt="api">
+        <p>github</p>
+      </a>
+      <a href="#">
+        <img src="img/slack.png" alt="api">
+        <p>Canal de Slack</p>
+      </a>
+      <a href="#">
+        <img src="img/study.png" alt="api">
+        <p>Curricula</p>
+      </a>
+    </section>
+  </div>
 </body>
 </html>
